fixed exhibit-item spacing border

--- a/css/theme.css
+++ b/css/theme.css
@@ -223,3 +223,6 @@ div.image-box div.title {
 .text-image-right .exhibit-item { margin-left: 20px; }
 .text-image-left .exhibit-item { margin-right: 20px; }
 .text-image-right .exhibit-item-description, .text-image-left .exhibit-item-description { font-size: 12px; color: #666;}
+
+/** York U Mod to fix exhibit item with no border **/
+div.gallery-thumbnails div.primary div.exhibit-item {display:block; float:left; width:auto; height:auto; padding-top:0px; margin-right:0px; margin-bottom: 0px; border: 4px solid white;}
